bg color changed

--- a/index.html
+++ b/index.html
@@ -829,83 +829,86 @@
     </div>  -->
     <!-- End Digital Signage Section Section -->
 
-
-    <div class="container mt-5">
-      <h2 class="text-center text-uppercase text-danger fw-bold">SOME OF OUR DIGITAL SIGNAGE SECTOR/SOLUTIONS
-      </h2>
-      <div class="row" id="features">
-        <div class="owl-carousel owl-theme" id="aboutus">
-          <div class="item">
-            <a href="retail.html">
-              <img src="assets/img/retail/retail1.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Retail</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="restaurants.html">
-              <img src="assets/img/restaurants/2.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Bar/Restaurants</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="hotels.html">
-              <img src="assets/img/hotels/9.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Hotels</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="education.html">
-              <img src="assets/img/education/new2.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Education</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="mall-supermarket.html">
-              <img src="assets/img/mall/2.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Mall/Supermarket</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="hospitals.html">
-              <img src="assets/img/hospital/new3.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Hospitals</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="car-show.html">
-              <img src="assets/img/Car-show/C.png" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Car Show</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="gym.html">
-              <img src="assets/img/Gym/1.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Gym/Fitness Center</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="airport.html">
-              <img src="assets/img/Airport/2.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Airport</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="event-places.html">
-              <img src="assets/img/Event-places/2.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Event Places</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="government-institutions.html">
-              <img src="assets/img/Government-institutions/1.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Government Institutions</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="stadium.html">
-              <img src="assets/img/Stadiums/2.jpeg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Stadiums</b></p>
-            </a>
+    <div class="sky-blue">
+      <div class="container mt-5">
+        <br>
+        <br>
+        <h2 class="text-center text-uppercase text-danger fw-bold">SOME OF OUR DIGITAL SIGNAGE SECTOR/SOLUTIONS
+        </h2>
+        <div class="row" id="features">
+          <div class="owl-carousel owl-theme" id="aboutus">
+            <div class="item">
+              <a href="retail.html">
+                <img src="assets/img/retail/retail1.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Retail</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="restaurants.html">
+                <img src="assets/img/restaurants/2.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Bar/Restaurants</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="hotels.html">
+                <img src="assets/img/hotels/9.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Hotels</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="education.html">
+                <img src="assets/img/education/new2.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Education</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="mall-supermarket.html">
+                <img src="assets/img/mall/2.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Mall/Supermarket</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="hospitals.html">
+                <img src="assets/img/hospital/new3.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Hospitals</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="car-show.html">
+                <img src="assets/img/Car-show/C.png" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Car Show</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="gym.html">
+                <img src="assets/img/Gym/1.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Gym/Fitness Center</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="airport.html">
+                <img src="assets/img/Airport/2.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Airport</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="event-places.html">
+                <img src="assets/img/Event-places/2.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Event Places</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="government-institutions.html">
+                <img src="assets/img/Government-institutions/1.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Government Institutions</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="stadium.html">
+                <img src="assets/img/Stadiums/2.jpeg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Stadiums</b></p>
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -1163,58 +1166,62 @@
     </section> -->
     <!-- End Portfolio Section -->
 
-    <div class="container mt-5">
-      <h2 class="text-center text-uppercase text-danger fw-bold">Our Work
-      </h2>
-      <div class="row" id="industries">
-        <div class="owl-carousel owl-theme" id="aboutus">
-          <div class="item">
-            <a href="hotels.html">
-              <img src="assets/img/our_work/1.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Hotels</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="government-institutions.html">
-              <img src="assets/img/our_work/2.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Government Institutions</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="hotels.html">
-              <img src="assets/img/our_work/3.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Hotels</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="restaurants.html">
-              <img src="assets/img/our_work/4.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Restaurants</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="restaurants.html">
-              <img src="assets/img/our_work/5.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Restaurants</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="restaurants.html">
-              <img src="assets/img/our_work/6.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Restaurants</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="government-institutions.html">
-              <img src="assets/img/our_work/7.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Government Institutions</b></p>
-            </a>
-          </div>
-          <div class="item">
-            <a href="bank.html">
-              <img src="assets/img/our_work/8.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Banks</b></p>
-            </a>
+    <div class="sky-blue">
+      <div class="container mt-5">
+        <br>
+        <br>
+        <h2 class="text-center text-uppercase text-danger fw-bold">Our Work
+        </h2>
+        <div class="row" id="industries">
+          <div class="owl-carousel owl-theme" id="aboutus">
+            <div class="item">
+              <a href="hotels.html">
+                <img src="assets/img/our_work/1.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Hotels</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="government-institutions.html">
+                <img src="assets/img/our_work/2.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Government Institutions</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="hotels.html">
+                <img src="assets/img/our_work/3.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Hotels</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="restaurants.html">
+                <img src="assets/img/our_work/4.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Restaurants</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="restaurants.html">
+                <img src="assets/img/our_work/5.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Restaurants</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="restaurants.html">
+                <img src="assets/img/our_work/6.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Restaurants</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="government-institutions.html">
+                <img src="assets/img/our_work/7.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Government Institutions</b></p>
+              </a>
+            </div>
+            <div class="item">
+              <a href="bank.html">
+                <img src="assets/img/our_work/8.jpg" alt="" class="img-fluid border border-dark">
+                <p class="text-center text-dark"><b>Banks</b></p>
+              </a>
+            </div>
           </div>
         </div>
       </div>
