bg color changed

--- a/advertising-with-us.html
+++ b/advertising-with-us.html
@@ -328,9 +328,9 @@
                 These digital signs are typically found in: lobbies, waiting rooms, and other public spaces such as
                 libraries and bus stops
             </p>
-            <div class="row">
+            <div class="row white-smoke">
                 <div class="col-md-10">
-                    <div class="row white-smoke">
+                    <div class="row">
                         <div class="col-md-4 offset-md-2 p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
@@ -370,9 +370,9 @@
                 </div>
             </div>
             <hr>
-            <div class="row mt-2">
+            <div class="row mt-2 white-smoke">
                 <div class="col-md-10">
-                    <div class="row white-smoke">
+                    <div class="row">
                         <div class="col-md-4 offset-md-2 p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
@@ -413,9 +413,9 @@
                 </div>
             </div>
             <hr>
-            <div class="row mt-2">
+            <div class="row mt-2 white-smoke">
                 <div class="col-md-10">
-                    <div class="row white-smoke">
+                    <div class="row">
                         <div class="col-md-4 offset-md-2 p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
