home page slider updated

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <div class="carousel-inner mt-5" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active mt-5" style="background-image: url(assets/img/homepage-slider/Retail.jpg)">
+        <div class="carousel-item active mt-5" style="background-image: url(assets/img/slide/slide-a.png)">
           <div class="carousel-container mt-5">
             <div class="container mt-5">
               <h2 class="animate__animated animate__fadeInDown mt-5">
@@ -195,7 +195,7 @@
         </div>
 
         <!-- Slide 2 -->
-        <div class="carousel-item mt-5" style="background-image: url(assets/img/homepage-slider/Bar.jpg)">
+        <div class="carousel-item mt-5" style="background-image: url(assets/img/slide/slide-b.jpg)">
           <div class="carousel-container mt-5">
             <div class="container mt-5">
               <h2 class="animate__animated animate__fadeInDown mt-5"><span class="orange">AFLAX: RESTAURANTS</span> <br>
@@ -209,7 +209,7 @@
         </div>
 
         <!-- Slide 3 -->
-        <div class="carousel-item mt-5" style="background-image: url(assets/img/homepage-slider/Health\ care.jpg)">
+        <div class="carousel-item mt-5" style="background-image: url(assets/img/slide/slide-c.jpg)">
           <div class="carousel-container mt-5">
             <div class="container mt-5">
               <h2 class="animate__animated animate__fadeInDown mt-5"><span class="green">AFLAX: HEALTHCARE</span>
@@ -225,7 +225,7 @@
         </div>
 
         <!-- Slide 4 -->
-        <div class="carousel-item mt-5" style="background-image: url(assets/img/homepage-slider/Store.jpg)">
+        <div class="carousel-item mt-5" style="background-image: url(assets/img/slide/slide-d.jpg)">
           <div class="carousel-container mt-5">
             <div class="container mt-5">
               <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: CONVENIENCE STORE</span>
