--- a/retail.html
+++ b/retail.html
@@ -155,19 +155,20 @@
               <div class="container mt-5">
                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span>
                   <br>
-                  Are you looking to create a dynamic in-store experience with Digital Store Signage? 
+                  Are you looking to create a dynamic in-store experience with Digital Store Signage?
                 </h2>
               </div>
             </div>
           </div>
 
           <!-- Slide 2 -->
-          <div class="carousel-item mt-5" style="background-image: url(assets/img/retail/headers-1080x675-RetailDigitalSignage.png)">
+          <div class="carousel-item mt-5"
+            style="background-image: url(assets/img/retail/headers-1080x675-RetailDigitalSignage.png)">
             <div class="carousel-container mt-5">
               <div class="container mt-5">
                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span>
                   <br>
-                  We will provide you with a solution that promises to increase customer engagement and boost sales. 
+                  We will provide you with a solution that promises to increase customer engagement and boost sales.
                 </h2>
               </div>
             </div>
@@ -709,7 +710,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Sailor</h3>
+              <h3>Aflax Digital Signage</h3>
               <p>
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
@@ -729,33 +730,44 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="rental.html">Rental</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="retail.html">Retail</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="restaurants.html">Bar / Restaurants</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="hotels.html">Hotels</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="education.html">Education</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="bank.html">Bank</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Our Products</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="indoor-lcd-display.html">Indoor LCD Display</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="lcd-video-wall.html">LCD Video Wall</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="lcd-advertising-display.html">LCD Advertising Display</a>
+              </li>
+              <li><i class="bx bx-chevron-right"></i> <a href="outdoor-lcd-display.html">Outdoor LCD Display</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="advertising-light-box.html">Advertising Light Box</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
             <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
 
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -763,14 +775,14 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Sailor</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>AFLAX DIGITAL SIGNAGE</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sailor-free-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://abusalehfaysal.github.io/">Abu Saleh Faysal</a>
       </div>
     </div>
   </footer><!-- End Footer -->
