retail page update

--- a/index.html
+++ b/index.html
@@ -1776,6 +1776,7 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="advertising-with-us.html">Advertise With Us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="rental.html">Rental</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contact Us</a></li>
             </ul>
