--- a/retail.html
+++ b/retail.html
@@ -33,6 +33,34 @@
   <!-- Custome CSS File -->
   <link rel="stylesheet" href="assets/css/custom.css">
 
+  <!-- Owl Carousel File -->
+  <link rel="stylesheet" href="assets/owlcarousel/owl.carousel.min.css">
+  <link rel="stylesheet" href="assets/owlcarousel/owl.theme.default.min.css">
+
+  <style>
+    .owl-prev,
+    .owl-next {
+      position: absolute;
+      top: 40%;
+      transform: translateY(-50%);
+      content: "next";
+    }
+
+    .owl-prev {
+      left: -2rem;
+    }
+
+    .owl-next {
+      right: -2rem;
+    }
+
+
+    video {
+      width: 100%;
+      height: auto;
+    }
+  </style>
+
   <!-- =======================================================
   * Author: Abu Saleh Faysal
   ======================================================== -->
@@ -496,8 +524,10 @@
 
 
     <!-- ======= Clients Section ======= -->
-    <section id="clients" class="clients white-smoke mt-5">
+    <section id="clients" class="clients sky-blue mt-5">
       <div class="container">
+        <br>
+        <br>
         <h2 class="text-danger fw-bold">CUSTOMERS</h2>
         <div class="row">
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
@@ -530,7 +560,7 @@
     </section><!-- End Clients Section -->
 
     <!-- ======= Start Features Section ======= -->
-    <section class="products p-0 mt-5">
+    <!-- <section class="products p-0 mt-5">
       <div class="container">
         <h2 class="text-center text-uppercase text-danger fw-bold">Digital Signage Product for Retail Industry</h2>
         <div class="row mt-3">
@@ -612,15 +642,93 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
+    <div class="container mt-5">
+      <h2 class="text-center text-uppercase text-danger fw-bold">Digital Signage Product for Retail Industry
+      </h2>
+      <div class="row">
+        <div class="owl-carousel owl-theme" id="aboutus">
+          <div class="item">
+            <a href="indoor-lcd-display.html">
+              <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Indoor LCD Display</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="lcd-video-wall.html">
+              <img src="assets/img/LCD-Video-Wall/2.png" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>LCD Video Wall</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="lcd-advertising-display.html">
+              <img src="assets/img/LCD-Advertising-Display/2.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>LCD Advertising Display</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="outdoor-lcd-display.html">
+              <img src="assets/img/Outdoor-LCD-Display/2.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Outdoor LCD Display</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="advertising-light-box.html">
+              <img src="assets/img/Advertising-Light-Box/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Advertising Lightbox</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="frontlit-billboard.html">
+              <img src="assets/img/frontlit-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Frontlit Billboard</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="backlit-billboard.html">
+              <img src="assets/img/backlit-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Backlit Billboard</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="led-screen-billboard.html">
+              <img src="assets/img/LED-Screen-Billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>LED Screen Billboard</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="scrolling-billboard.html">
+              <img src="assets/img/scrolling-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Scrolling Billboard</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="scrolling-lightbox.html">
+              <img src="assets/img/Scrolling-Lightbox/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Scrolling Lightbox</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="lamp-pole-lightbox.html">
+              <img src="assets/img/Lamp-Pole-Lightbox/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Lamp Pole Lightbox</b></p>
+            </a>
+          </div>
+          <div class="item">
+            <a href="lamp-pole-display.html">
+              <img src="assets/img/Lamp-Pole-Display/tgg.png" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Lamp Pole Display</b></p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- End Features Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact white-smoke">
+    <section id="contact" class="contact">
       <div class="container">
-        <h2 class="text-center"><b><span class="red">CONTACT US TODAY</span></b></h2>
-        <h6 class="text-center text-primary"><b> Our current happy users started here...</b></h6>
-        <h2 class="text-center"><b>Book An Online Demo</b></h2>
+        <h2 class="text-center"><b><span class="text-white">CONTACT US TODAY</span></b></h2>
         <!-- <div>
           <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
         </div> -->
@@ -631,29 +739,29 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h4 class="text-white">Location:</h4>
+                <p class="text-white">A108 Adam Street, New York, NY 535022</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>info@example.com</p>
+                <h4 class="text-white">Email:</h4>
+                <p class="text-white">info@example.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <h4 class="text-white">Call:</h4>
+                <p class="text-white">+1 5589 55488 55s</p>
               </div>
 
             </div>
 
           </div>
 
-          <div class="col-lg-8 mt-5 mt-lg-0 white-smoke">
+          <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form white-smoke">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your First Name" required>
@@ -689,7 +797,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Submit Demo Request</button></div>
+              <div class="text-center"><button class="btn btn-light">Submit</button></div>
             </form>
 
           </div>
@@ -731,6 +839,7 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="advertising-with-us.html">Advertise With Us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="rental.html">Rental</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contact Us</a></li>
             </ul>
@@ -789,6 +898,32 @@
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="assets/owlcarousel/owl.carousel.min.js"></script>
+  <script>
+    $('.owl-carousel').owlCarousel({
+      loop: true,
+      margin: 10,
+      autoplay: true,
+      autoplayTimeout: 1000,
+      autoplayHoverPause: true,
+      nav: true,
+      navText: ["<h1 class='display-4'><i class='fa fa-chevron-left'></i></h1>", "<h1 class='display-4'><i class='fa fa-chevron-right'></i></h1>"],
+      responsive: {
+        0: {
+          items: 1
+        },
+        600: {
+          items: 3
+        },
+        1000: {
+          items: 4
+        }
+      }
+    })
+  </script>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
